tests/bad/match_no_body.oc
/// fail: `else` case is missing

// Test to see if we can actually move past the parsing
// error and continue to the type-checking phase.

def main() {
    match 5
}